Fixed in-meme text alignment, something else

--- a/css/componenets/main-content.css
+++ b/css/componenets/main-content.css
@@ -10,7 +10,7 @@
     /* padding: 10px 20px; */
 }
 
-.main-content-container.gallery-mode {
+.main-content-container.meme-mode {
     box-shadow: none;
     background-color: initial;
 }
